--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "compile:sass": "sass src/main.scss src/style.css -w"
   },
   "dependencies": {
+    "@r2wc/react-to-web-component": "^2.0.4",
     "bootstrap": "^5.3.3",
+    "install": "^0.13.0",
+    "npm": "^11.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.83.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "vite-plugin-css-injected-by-js": "^3.5.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
     "@eslint/js": "^9.17.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-onboarding": "^8.4.7",
@@ -38,6 +43,7 @@
     "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.13.0",
     "storybook": "^8.4.7",
+    "tslib": "^2.8.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
     "vite": "^6.0.3"
